--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.11.3",
+    "luxon": "^3.7.2",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
